--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     tools:context=".Recipes">
 
@@ -24,22 +23,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="You do not have any recipes."
+        android:text="You don't have any recipes."
         android:id="@+id/empty_notice"
         android:textSize="14sp"
         android:visibility="invisible"
         android:layout_below="@+id/list_image"
         android:layout_centerHorizontal="true"  />
-
-    <com.getbase.floatingactionbutton.AddFloatingActionButton
-        android:id="@+id/float_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        fab:fab_plusIconColor="#FFFFFF"
-        fab:fab_colorNormal="#23ff14"
-        fab:fab_colorPressed="#18d50f"
-        android:alpha=".75"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true" />
 
 </RelativeLayout>
