Added AutoComplete to Categories
Added a feature that stores passed categories that the user uses.
These categories can then be used again by the users if they type the
first 2 letters of the stored category.

--- a/app/src/main/res/layout/dialog_add_item.xml
+++ b/app/src/main/res/layout/dialog_add_item.xml
@@ -14,7 +14,7 @@
         android:inputType="text|textCapWords"
         android:singleLine="true"
         android:hint="Name"/>
-    <EditText
+    <AutoCompleteTextView
         android:id="@+id/Type"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
