--- a/app/src/main/res/layout/activity_current_list.xml
+++ b/app/src/main/res/layout/activity_current_list.xml
@@ -36,6 +36,14 @@
             android:textSize="14sp"
             android:visibility="invisible" />
 
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Button"
+            android:id="@+id/button"
+            android:layout_gravity="center_horizontal|bottom" />
+
     </FrameLayout>
 
 </RelativeLayout>
