--- a/app/src/main/res/menu/menu_current_list.xml
+++ b/app/src/main/res/menu/menu_current_list.xml
@@ -30,8 +30,8 @@
         </menu>
     </item>
     <item
-        android:title="Delete Items..."
+        android:title="Delete Checked Items"
         android:id="@+id/delete_items"
-        app:showAsAction="ifRoom"
-        android:icon="@mipmap/trash"/>
+        android:icon="@mipmap/trash"
+        app:showAsAction="ifRoom"/>
 </menu>
