Can now add Recipes/Activities from within a List
Also in the Transfer class, I made it check the given item if the user
clicks the plus/minus or edits the item.

--- a/app/src/main/res/menu/menu_current_list.xml
+++ b/app/src/main/res/menu/menu_current_list.xml
@@ -34,4 +34,10 @@
         android:id="@+id/delete_items"
         android:icon="@mipmap/trash"
         app:showAsAction="ifRoom"/>
+    <item
+        android:title="Add a Recipe"
+        android:id="@+id/addRecipe"/>
+    <item
+        android:title="Add an Activity"
+        android:id="@+id/addActivity"/>
 </menu>
