attempting to add headers and autocomplete text features
2 features in this push
- headers(displayed when list is sorted)
- autocomplete (finishes the word you are typing) for name, type, and
unit

--- a/app/src/main/res/layout/dialog_edit_item.xml
+++ b/app/src/main/res/layout/dialog_edit_item.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:layout_weight=".9"
     android:orientation="vertical">
-    <EditText
+    <AutoCompleteTextView
         android:id="@+id/Name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,7 +14,7 @@
         android:inputType="text|textCapWords"
         android:singleLine="true"
         android:hint="Name" />
-    <EditText
+    <AutoCompleteTextView
         android:id="@+id/Type"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -59,7 +59,7 @@
             android:maxWidth="70dp"
             android:maxLength="5"/>
 
-        <EditText
+        <AutoCompleteTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/units"
