Fixed Many Header Bugs; Autocomplete is optional and can be cleared

--- a/app/src/main/res/layout/activity_header.xml
+++ b/app/src/main/res/layout/activity_header.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:id="@+id/row">
 
     <TextView
         style="?android:attr/listSeparatorTextViewStyle"
@@ -10,7 +11,9 @@
         android:text="Header"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="#757678"
-        android:textColor="#f5c227" />
+        android:background="#5d5d5d"
+        android:textColor="#ffe100"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp" />
 
 </LinearLayout>
