--- a/app/src/main/res/menu/menu_current_list.xml
+++ b/app/src/main/res/menu/menu_current_list.xml
@@ -18,7 +18,7 @@
             <item android:id="@+id/sort_name"
                 android:title="Sort By Name"/>
             <item android:id="@+id/sort_type"
-                android:title="Sort By Type"/>
+                android:title="Sort By Category"/>
             <item android:id="@+id/sort_quantity"
                 android:title="Sort By Quantity"/>
             <item android:id="@+id/sort_owner"
@@ -32,7 +32,7 @@
     <item
         android:title="Add"
         android:id="@+id/plus"
-        android:icon="@mipmap/plus"
+        android:icon="@mipmap/add_to_list"
         app:showAsAction="always">
         <menu
             android:id="@+id/plus_menu">
