--- a/app/src/main/res/layout/row_list.xml
+++ b/app/src/main/res/layout/row_list.xml
@@ -1,20 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/row"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
     android:gravity="center_vertical">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imported"
+        android:src="@mipmap/imported"
+        android:layout_centerInParent="true"
+        android:alpha=".25"
+        android:layout_gravity="center"
+        android:visibility="invisible" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         android:paddingLeft="10dp"
-        android:paddingRight="20dp">
+        android:paddingRight="10dp"
+        android:id="@+id/primary"
+        android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
+        android:layout_centerInParent="true">
 
         <CheckBox
             android:id="@+id/checkBox"
@@ -85,39 +98,4 @@
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:weightSum="3"
-        android:background="#3a3a3a"
-        android:visibility="invisible">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:id="@+id/txt_delete"
-            android:gravity="center_vertical"
-            android:text="Swipe to Delete"
-            android:clickable="false"
-            android:layout_weight="2"
-            android:hapticFeedbackEnabled="true"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:paddingLeft="25dp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:id="@+id/txt_undo"
-            android:text="UNDO"
-            android:clickable="false"
-            android:layout_weight="1"
-            android:textColor="#ffea00"
-            android:textStyle="bold"
-            android:textSize="22sp" />
-
-    </LinearLayout>
-
-</FrameLayout>
+</RelativeLayout>
