--- a/app/src/main/res/menu/menu_current_recipe.xml
+++ b/app/src/main/res/menu/menu_current_recipe.xml
@@ -13,19 +13,19 @@
         <menu
             android:id="@+id/sort">
             <item android:id="@+id/sort_time"
-                android:title="Sort By Time"/>
+                android:title="Sort By Time Added"/>
             <item android:id="@+id/sort_name"
                 android:title="Sort By Name"/>
             <item android:id="@+id/sort_type"
                 android:title="Sort By Category"/>
+            <!-- todo: remove quantity or make visible (prefer removal) -->
             <item android:id="@+id/sort_quantity"
-                android:title="Sort By Quantity"/>
+                android:title="Sort By Quantity"
+                android:visible="false"/>
             <item android:id="@+id/sort_owner"
                 android:title="Sort By Owner"/>
             <item android:id="@+id/unsorted"
                 android:title="Turn Off Sort"/>
-            <!--   <item android:id="@+id/sort_custom"
-                android:title="Custom Sort"/>   -->
         </menu>
     </item>
     <item
