Changed Public functions to Private; Minor Adjustments
Made trash can less bright; fixed transfer bug to a list still showing
the empty notice; cleaned comments

--- a/app/src/main/res/layout/row_header.xml
+++ b/app/src/main/res/layout/row_header.xml
@@ -33,6 +33,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:alpha=".5" />
 
 </RelativeLayout>
