Trash Can only on "Checked Items" header; Modified Category Sort
Checked Items are now always at the bottom below the "Checked Items"
header

--- a/app/src/main/res/menu/menu_current_list.xml
+++ b/app/src/main/res/menu/menu_current_list.xml
@@ -30,7 +30,7 @@
         </menu>
     </item>
     <item
-        android:title="Add"
+        android:title="Add To List"
         android:id="@+id/plus"
         android:icon="@mipmap/add_to_list"
         app:showAsAction="always">
