--- a/app/src/main/res/menu/menu_current_activity.xml
+++ b/app/src/main/res/menu/menu_current_activity.xml
@@ -29,7 +29,7 @@
         </menu>
     </item>
     <item
-        android:title="Add To List..."
+        android:title="Add To List"
         android:id="@+id/add_to_list"
         app:showAsAction="ifRoom"
         android:icon="@mipmap/add_to_list"
