--- a/app/src/main/res/menu/menu_dashboard.xml
+++ b/app/src/main/res/menu/menu_dashboard.xml
@@ -13,10 +13,6 @@
                 android:title="Sort By Time Created"/>
             <item android:id="@+id/sort_owner"
                 android:title="Sort By Owner"/>
-            <item android:id="@+id/unsorted"
-                android:title="Turn Off Sort"/>
-            <!--   <item android:id="@+id/sort_custom"
-                android:title="Custom Sort"/>   -->
         </menu>
     </item>
     <item
@@ -24,11 +20,20 @@
         android:id="@+id/delete"
         app:showAsAction="ifRoom"
         android:icon="@mipmap/trash"/>
+
     <item
-        android:title="Disable Autocomplete"
-        android:id="@+id/autocomplete"
-        android:checkable="true"/>
-    <item
-        android:title="Clear Autocomplete Memory"
-        android:id="@+id/clearAutocomplete"/>
+        android:title="Settings"
+        android:id="@+id/settings"
+        android:icon="@mipmap/settings"
+        app:showAsAction="ifRoom">
+        <menu>
+            <item
+                android:title="Disable Autocomplete"
+                android:id="@+id/autocomplete"
+                android:checkable="true"/>
+            <item
+                android:title="Clear Autocomplete Memory"
+                android:id="@+id/clearAutocomplete"/>
+        </menu>
+    </item>
 </menu>
